productpage/product_page.css
@import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
      
        *{
           font-family: 'Mulish', sans-serif;
        }
        body{
          background-color: rgb(245, 245, 246);
        }

        /* Image Carousel  */
        .swiper {
        width: 100%;
      }

      .swiper-slide {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        position: relative;
        margin-right: 10px;
      }
      .swiper-btn {
        background-color: white;
        padding: 10px 15px;
        border-radius: 50%;
      }
      .swiper-button-next:after,
      .swiper-button-prev:after {
        font-size: 21px;
        color: black;
        font-weight: 900;
      }

      .swiper-slide img {
        display: block;
        width: 100%;
      }

      @media only screen and (min-width: 769px) {
        .swiper-slide:first-child {
          transition: transform 100ms;
        }

        .swiper-slide:first-child img {
          transition: box-shadow 500ms;
        }

        .swiper-slide.swiper-slide-active:first-child {
          transform: translateX(50%);
          z-index: 2;
        }

        .swiper-slide.swiper-slide-active:first-child img {
          box-shadow: 0px 32px 80px rgba(0, 0, 0, 0.35);
        }

        .swiper-slide:nth-child(2) {
          transition: transform 100ms;
        }

        .swiper-slide.swiper-slide-next:nth-child(2) {
          transform: translateX(55%);
          z-index: 1;
        }

        .swiper[dir="rtl"] .swiper-slide.swiper-slide-active:first-child {
          transform: translateX(-50%);
        }

        .swiper[dir="rtl"] .swiper-slide.swiper-slide-next:nth-child(2) {
          transform: translateX(-55%);
        }
      }

  /* Image Carousel End */
  *{
    font-family: sans-serif;
}
body{
    background-color: whitesmoke;

}

.container{
    width: 85%;
    height: 100%;
    margin: auto;

}
.container > div{
    margin: 1%;
}
.row{
    display: flex;
   
}
.center{
    align-items: center;
}
.col-left{
    position: sticky;
    top: 110px;
    z-index: 1;
    width: 15%;
    height: 30%;
    
    padding: 15px;
    background-color: white;
    border: none;
    border-radius: 2px;
    cursor: pointer;

}
.col-mid{
   
    width: 50%;
    height: auto;
    border-radius: 2px;
    display: grid;
    grid-template-columns: repeat(2,49%);
   column-gap: 3%;
   row-gap: 0.5%;
}
.col-right{
    position: sticky;
    top: 110px;
    z-index: 1;
    width: 33%;
    height: 30%;

    border-radius: 2px;
    border: none;
    background-color: white;
    padding: 15px;

}
.cart-small-txt{
    font-size: 12px;
    color:#BDBDBD;

}

.item-btn{
    border: 1px solid #FFA000;
    background-color: white;
    color: black;
    font-size: 18px;
    border-radius: 4px 7px 7px 4px;
    margin: 8px;
    height: 40px;
    width: 40px;
}
#plus-btn{
    border-radius: 7px 4px 4px 7px;

}
.p-text-color{
    color:#726e6e;
    font-size: 14px;

}
.margin{
    margin: 6px;
}

.addtoCartBtn{
    width: 50%;
    height: 30px;
    border-radius: 4px;
    font-size: 15px;
    font-weight: 500;
    color: black;
    border: none;
    background-color: #FFCA28; 
}
.cart-bottom-left{
    width: 85%;
}
.cart-bottom-right{
    width: 15%;
}
.checkout-btn{
    width: 100%;
    height: 46px;
    border-radius: 4px;
    font-size: 16px;
    font-weight: 600;
    color: black;
    border: none;
    background-color: #FFCA28;
}
.text-bold{
    font-size: 22px;
    font-weight: 700;
}
.line-height{
    line-height: 0%;
}
        /* product page description */
        .prod-desc{
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
          margin: 10px 10px 0 0 ;
          color: grey;
          font-size: 15px;
        }
         .prod-desc + p{
             margin-top: 0;
             color: grey;
             font-weight: bold;

         }
        
        .prod_name{
            font-weight: 900;
            font-size: 25px;
        }
        .prod-name-price{
            align-items: center;
        }
        .prod-name-price > p:nth-child(1){
            width: 300px;
        }
        .prod-name-price > p:nth-child(2){
            white-space: nowrap;
            font-weight: 600;
        }
        .prod-rating-div{
            text-align:center;
            font-size: 15px;
            background-color:rgb(76, 175, 80);
            border-radius: 4px;
            color: white;
            height:25px;
            width:70px;
            font-weight: bold;
            line-height:35px;
        }
        .prod-rating-div > p{
            margin: 0;
        
            
        }
        .fa-star{
            margin-right:5px;
            font-size: 15px;
            

        }
        .addtoCart{
            /* display: none; */
            text-align: center;

        }
        .addtoCart>div{
            background-color:#FFCA28;
            padding:10px;
            height:30px;
            font-size: 17;
            line-height: 30px;
            border-radius: 4px;
            font-weight: bold;
            width: 150px;
        }
        .addtoCart>p{
        color:grey;
        margin: 0;
        }

        /* search bar css*/

        #search-container{
            padding:20px;
            position: sticky;
            top: 0;
            background-color: white;
            z-index: 1;
            width:85%;
            margin:auto;
            border-bottom: 1.5px solid rgb(96, 94, 94);
        }
        #searchhead{
          display: grid;
          grid-template-columns: 25% 40%;
          grid-gap:32%;
          margin-top: 2%;
      }
      #searchhead > div:nth-child(1){ 
          text-align: right;
          color: rgb(51, 51, 51);
          font-weight: 400;
          font-size: 2rem;
          font-family: Muli, sans-serif;
      }
      #searchhead > div:nth-child(2){
          display: grid;
          grid-template-columns: 40% 28% 24%;
          grid-gap:2%;
          color:grey;
          font-weight: 100;
      }
      #searchhead > div:nth-child(2) > div:nth-child(1){
          display: grid;
          border-radius: 5px;
          grid-template-columns: 8% 85%;
          grid-gap: 8%;
          padding: 5%;
          cursor: pointer;
          background-color: white;
       
          box-shadow:1px 3px 5px lightgray;
      }
      #searchhead > div:nth-child(2) > div:nth-child(2){
          display: grid;
          grid-template-columns: 10% 80%;
          grid-gap: 8%;
          padding: 7% 2%;
          cursor: pointer;
          background-color: white;
          border-radius: 5px;
          box-shadow:1px 3px 5px lightgray;

      }
      #searchhead > div:nth-child(2) > div:nth-child(3){
          display: grid;
          grid-template-columns: 10% 80%;
          grid-gap: 10%;
          padding-top:8.5%;
          padding-right:2%;
          cursor: pointer;
          background-color: white;
             border-radius: 5px;
          box-shadow:1px 3px 5px lightgray;

      }
      /* Search Modal CSS */
      #searchModal{

          display: none; 
          position: fixed; 
          z-index: 1;
          left: 0;
          top:0;
          width: 100%;
          height: 65%; 
          overflow: auto; 
          background-color: rgb(0,0,0); 
          background-color: rgb(245, 245, 246);
          padding-top: 50px;
      }
      #close{
          font-size: 30px;
          font-weight: bold;
          border:none;
          cursor:pointer;
      }
      #modalContent{
          display:grid;
          grid-template-columns: 5% 65% 5%;
          grid-gap:1%;
          margin-left: 20%;
      }
      #modalContent > input:nth-child(2){
          padding:1%;
          border:none;
          outline: none;
          font-size: large;
      }
      #modalContent > i:nth-child(3){
          font-size: 40px;
          cursor:pointer;
      }
      #searchContent{
          width:51.85%;
          height: 60%;
          background-color: white;
          margin-left: 24.9%;
          overflow: scroll;
      }
      /*searchbar css End*/



      /* adding css to increase / decrease quantity */
      .inc-des-quantity{
          display: flex;
          gap:10px;
        }
        .minus , .plus{
            border:1px solid #FFA000;
            padding:5px 10px;
            font-size: 15px;
            font-weight: bold;
        }
        .minus{
            border-radius:2px 10px 10px 2px;

        transform: skewY(3deg);
        }
        .plus{
        transform: skewY(-deg);
        border-radius:10px 2px 2px 10px;

        }
        .qty{
                  border:1px solid #FFA000;
            padding:5px 10px;
            font-size: 15px;
            border-radius:2px 10px 10px 2px;
            font-weight: bold;
            border: none;
            padding:5px 5px;
        }
        
        /* adding customization css  */
.custom-parent{
    display: none;
position: fixed;

top:-16px;
     left: -20px;
    height: 100vh;
    width: 100%;
z-index:2;
background-color:rgba(0, 0, 0, 0.5);


}
.custom{

    
    height: 650px;
    width:500px;
    max-width: 500px;
    margin: auto;
    margin-top: 50px;
    position: relative;
    border-radius: 10px;
    overflow: hidden;
box-shadow:0px 0px 5px grey;
background-color:white;

}
.custom-top{
    display: flex;
    font-size: 25px;
    padding: 20px;
    gap:20px;
    box-shadow: 0 2px 5px lightgray;
}
.custom-top i {
    cursor: pointer;

}
.custom-bottom{
    position: absolute;
height: 50px;
width:100%;
background-color:rgb(255, 211, 68);
bottom: 0;
/* padding:5px; */
}
.custom-bottom>p{
    text-align: center;
    font-size: 20px;
    margin: 0;
    line-height:50px;
}
.active-custom{
    display:block;
}


        

